--- a/Quoc_Mep/packages.config
+++ b/Quoc_Mep/packages.config
@@ -19,4 +19,6 @@
   <package id="VitalElement.DataVirtualization" version="0.0.40" targetFramework="net48" />
   <package id="WPF-UI" version="4.0.3" targetFramework="net48" />
   <package id="WPF-UI.Abstractions" version="4.0.3" targetFramework="net48" />
+  <package id="ricaun.Revit.UI" version="0.8.0" targetFramework="net48" />
+  <package id="ricaun.Revit.UI.StatusBar" version="1.0.0" targetFramework="net48" />
 </packages>
