--- a/Quoc_Mep/Quoc_MEP.csproj
+++ b/Quoc_Mep/Quoc_MEP.csproj
@@ -219,6 +219,8 @@
     <Compile Include="Rotate\ImprovedRotationEventHandler.cs" />
     <Compile Include="Rotate\RotateElementsCommand.cs" />
     <Compile Include="Rotate\RotateWindow.xaml.cs" />
+    <Compile Include="Rotate Sprinkler\AlignSprinklerCommand.cs" />
+    <Compile Include="Rotate Sprinkler\SprinklerAlignmentHelper.cs" />
     <Compile Include="Selection Filter\SelectionFilter.cs" />
     <Compile Include="Sheet from excel\SheetFromExcelCmd.cs" />
     <Compile Include="Sheet from excel\SheetFromExcelView.xaml.cs">
