Fix: Add LogHelper.cs to project file

--- a/Quoc_Mep/Quoc_MEP.csproj
+++ b/Quoc_Mep/Quoc_MEP.csproj
@@ -222,6 +222,7 @@
     <Compile Include="Rotate Sprinkler\AlignSprinklerCommand.cs" />
     <Compile Include="Rotate Sprinkler\SprinklerAlignmentHelper.cs" />
     <Compile Include="Rotate Sprinkler\SimplePapAlignment.cs" />
+    <Compile Include="Rotate Sprinkler\LogHelper.cs" />
     <Compile Include="Selection Filter\SelectionFilter.cs" />
     <Compile Include="Sheet from excel\SheetFromExcelCmd.cs" />
     <Compile Include="Sheet from excel\SheetFromExcelView.xaml.cs">
